# ST-Select

./: .gitignore  HANDOFF.md  PROJECT_LOG.md  README.md  packageInfo  pyproject.toml  requirements.txt  setup.py
results_e2e/: END_TO_END_REPORT.md
results_final/patient/cscc_uni/: results.json
results_final/patient/he_breast_uni/: results.json
results_final/patient/her2_breast_uni/: results.json
results_final/slide/cscc_uni/: results.json
results_final/slide/he_breast_uni/: results.json
results_final/slide/her2_breast_uni/: results.json
scripts/: prepare_hest_cache.py  prepare_hest_index.py  run_overnight.py
src/: AL_for_ST_Prediction_Tutorial.md  __init__.py  run_experiment.py
src/al_methods/: __init__.py  base.py  families.py  registry.py
src/al_methods/diversity/: __init__.py  badge.py  cdal.py  coreset.py  maxherding.py  probcover.py  typiclust.py
src/al_methods/hybrid/: __init__.py  alfa_mix.py  ccal.py  similar.py  ta_vaal.py  vaal.py  (+1 more)
src/datasets/: __init__.py  hest_loader.py  patch_dataset.py  splits.py  st_dataset.py
src/evaluation/: __init__.py  metrics.py  statistical_tests.py  visualization.py
src/models/: __init__.py  bleep.py  egn.py  feature_extractors.py  feature_predictor.py  hist2st.py  histogene.py  mclstexp.py  st_net.py  thitogene.py  trainable_feature_predictor.py  uni_regressor.py
src/preprocessing/: __init__.py  data_format.py  hvg_selection.py  image_cropping.py  position_extraction.py
src/training/: __init__.py  loop.py  trainer.py
src/utils/: __init__.py  config.py  reproducibility.py
tests/: test_smoke.py
(+19 files in other folders)
