[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "al-for-st-prediction"
version = "0.1.0"
description = "Active Learning benchmark for Spatial Transcriptomics gene-expression prediction"
readme = "AL_for_ST_Prediction_Tutorial.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "pandas>=2.0",
    "scanpy>=1.10",
    "anndata>=0.10",
    "Pillow>=10.0",
]

[project.optional-dependencies]
wsi = ["openslide-python>=1.3"]
hest = ["hest", "huggingface_hub>=0.20"]
foundation = ["timm>=0.9"]
viz = ["matplotlib>=3.7"]
dev = ["pytest>=7.0"]

[project.scripts]
al-st-benchmark = "src.run_experiment:main"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::RuntimeWarning", "ignore::UserWarning"]
